# harden-openclaw

./: .gitignore  .gitmodules  AGENTS.md  MEMORY.md  README.md  run_tests.sh
arsguard/: pyproject.toml  requirements.txt
arsguard/config/: arsguard.yaml
arsguard/docker/: docker-compose.yml
arsguard/docker/openclaw/: Dockerfile
arsguard/docker/squid/: Dockerfile  default.conf
arsguard/docker/squid/ws/: squid.conf
arsguard/scripts/: install_ollama.sh  setup.sh
arsguard/src/: __init__.py  arsguard.py  index.js  openclaw.plugin.json  security_server.py
arsguard/src/plugins/: __init__.py  arsguard_plugin.py  plugin_base.py
arsguard/src/plugins/hooks/: __init__.py  hook_base.py  llm01_prompt_injection.py  llm02_insecure_output.py  llm03_training_data_poisoning.py  llm04_model_dos.py  llm05_supply_chain.py  llm06_sensitive_info.py  llm07_insecure_plugin.py  llm08_excessive_agency.py  llm09_overreliance.py  llm10_model_theft.py  registry.py
arsguard/tests/: __init__.py  conftest.py  run_tests.sh  test_arsguard_plugin.py  test_config.py  test_hook_registry.py  test_integration.py  test_llm01_prompt_injection.py  test_llm02_insecure_output.py  test_llm03_training_data.py  test_llm04_model_dos.py  test_llm05_supply_chain.py  test_llm06_sensitive_info.py  test_llm07_insecure_plugin.py  test_llm08_excessive_agency.py  test_llm09_overreliance.py  test_llm10_model_theft.py
docker/: docker-compose.yml
docker/openclaw/: Dockerfile
docker/squid/: Dockerfile
docker/squid/http/: squid.conf
docker/squid/ws/: squid.conf
